dashlet button small issue fix

--- a/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
+++ b/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
@@ -2115,3 +2115,35 @@ ul#recent-menu-model-list li:nth-child(even){
 {
   margin-left:10px;
 }
+#settings-widgets-tab-content .btn-default , #settings-widgets-tab-content .btn-danger ,  #settings-widgets-tab-content .btn-primary, #widget-settings-tab-pane .btn-primary , #widget-settings-tab-pane .btn-default,#widget-settings-tab-pane .btn-danger
+{
+    height: 30px!important;
+    line-height: 30px!important;
+    font-size: 12px!important;
+    margin: 4px!important;
+    padding: 0 1em!important;
+}
+#settings-data-sync-tab-content .btn-default ,#settings-data-sync-tab-content .btn-primary ,#settings-data-sync-tab-content .btn-danger  ,#data-sync-settings-tab-content .btn-default ,#data-sync-settings-tab-content .btn-primary , #data-sync-settings-tab-content .btn-danger 
+{
+    height: 30px!important;
+    line-height: 30px!important;
+    font-size: 12px!important;
+    margin: 4px!important;
+    padding: 0 1em!important;
+}
+#import-tabs-content .btn-default
+{
+    height: 30px!important;
+    line-height: 30px!important;
+    font-size: 12px!important;
+    margin: 0px!important;
+    padding: 0 1em!important;
+}
+#portlets-add-listener .btn-default ,#workflows-listener-container .tab-content .btn.btn-default ,#triggers-tab-container .btn.btn-default ,.dash_tabview .tab-content  .btn-default
+{
+    height: 30px!important;
+    line-height: 30px!important;
+    font-size: 12px!important;
+    margin: 4px!important;
+    padding: 0 1em!important;
+}
